--- a/app/templates/band/songs.hbs
+++ b/app/templates/band/songs.hbs
@@ -7,6 +7,7 @@
     {{#each model as |song|}}
       <li class="list-group-item song">
         {{song.title}}
+        {{star-rating item=song rating=song.rating setAction="updateRating"}}
       </li>
     {{/each}}
   </ul>
