--- a/app/templates/bands.hbs
+++ b/app/templates/bands.hbs
@@ -2,8 +2,8 @@
   <div class="list-group-item">
     <form {{action "createBand" on="submit"}}>
       {{input type="text" class="new-band" placeholder="New band" value=name}}
-      <button type="submit" class="btn btn-primary btn-sm new-band-button"
-        {{bind-attr disabled=isAddButtonDisabled}}>Add</button>
+      <button class="btn btn-primary btn-sm new-band-button"
+        disabled={{isAddButtonDisabled}}>Add</button>
     </form>
   </div>
   <div class="list-group">
