--- a/app/templates/bands.hbs
+++ b/app/templates/bands.hbs
@@ -8,7 +8,7 @@
   </div>
   <div class="list-group">
     {{#each model as |band|}}
-      {{#link-to "band" band.slug class="list-group-item band-link"}}
+      {{#link-to "band" band class="list-group-item band-link"}}
         {{band.name}}
         <span class="pointer glyphicon glyphicon-chevron-right"></span>
       {{/link-to}}
