--- a/app/templates/band/songs.hbs
+++ b/app/templates/band/songs.hbs
@@ -4,14 +4,46 @@
       <div class="list-group-item">
         <form class="new-song-form" {{action "createSong" on="submit"}}>
           {{input type="text" class="new-song" placeholder="New song" value=title}}
-          <button class="btn btn-primary btn-sm new-song-button" disabled={{isDisabled}}>Add</button>
+          <button class="btn btn-primary btn-sm new-song-button" disabled= {{isDisabled}}>Add</button>
         </form>
       </div>
+      <div class="btn-group song-filter-search-panel" role="group">
+      <div class="sorting-panel">
+        {{#link-to (query-params sortBy="ratingDesc") class="sorting-link"}}
+          <button type="button" class="btn btn-default sort-rating-desc sorting-button">Rating
+            <span class="glyphicon glyphicon-arrow-down"></span>
+          </button>
+        {{/link-to}}
+        {{#link-to (query-params sortBy="ratingAsc") class="sorting-link"}}
+          <button type="button" class="btn btn-default sort-rating-asc sorting-button">Rating
+            <span class="glyphicon glyphicon-arrow-up"></span>
+          </button>
+        {{/link-to}}
+        {{#link-to (query-params sortBy="titleDesc") class="sorting-link"}}
+          <button type="button" class="btn btn-default sort-title-desc sorting-button">Title
+            <span class="glyphicon glyphicon-arrow-down"></span>
+          </button>
+        {{/link-to}}
+        {{#link-to (query-params sortBy="titleAsc") class="sorting-link"}}
+          <button type="button" class="btn btn-default sort-title-asc sorting-button">Title
+            <span class="glyphicon glyphicon-arrow-up"></span>
+          </button>
+        {{/link-to}}
+      </div>
+      <div class="search-panel">
+        {{input type="text" placeholder="Start typing" value=searchTerm class="search-field"}}
+        <div class="input-group-btn">
+          <button class="btn btn-default search-button">
+            <span class="glyphicon glyphicon-search" aria-label="search" aria-hidden="true"></span>
+          </button>
+        </div>
+      </div>
+      <div class="clearfix"></div>
+    </div>
     {{/if}}
-    {{#each model as |song|}}
+    {{#each sortedSongs as |song|}}
       <div class="list-group-item song">
-        {{song.title}}
-        {{star-rating item=song rating=song.rating setAction="updateRating"}}
+        {{song.title}} {{star-rating item=song rating=song.rating setAction="updateRating"}}
       </div>
     {{/each}}
     {{#unless canCreateSong}}
