--- a/app/templates/band/songs.hbs
+++ b/app/templates/band/songs.hbs
@@ -3,7 +3,7 @@
     {{#if canCreateSong}}
       <div class="list-group-item">
         <form class="new-song-form" {{action "createSong" on="submit"}}>
-          {{input type="text" class="new-song" placeholder="New song" value=title}}
+          {{input type="text" class="new-song" placeholder=newSongPlaceholder value=title}}
           <button class="btn btn-primary btn-sm new-song-button" disabled= {{isDisabled}}>Add</button>
         </form>
       </div>
@@ -43,7 +43,8 @@
     {{/if}}
     {{#each sortedSongs as |song|}}
       <div class="list-group-item song">
-        {{song.title}} {{star-rating item=song rating=song.rating setAction="updateRating"}}
+        {{capitalize-words song.title}}
+        {{star-rating item=song rating=song.rating setAction="updateRating"}}
       </div>
     {{/each}}
     {{#unless canCreateSong}}
